docs: Add final README and project files